# nixis

./: .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  aegis.yaml  docker-compose.yml  go.mod  go.sum  install.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.worktrees/build-lattice/: .gitignore
agent/: harness.py  runner.py
agent/attacks/: data_exfiltration.py  doc.go  privilege_escalation.py  prompt_injection.py  recursive_loop.py  resource_exhaustion.py
dashboard/: .env.example  README.md  embed.go  package-lock.json  package.json  playwright.config.ts  vite.config.ts
policies/: default.yaml  phase1-allow.yaml  phase1-deny.yaml  phase1-escalate.yaml  phase2-behavioral.yaml  schema.json
python/: pyproject.toml
python/aegis_guard/: __init__.py  client.py
python/aegis_guard/adapters/: __init__.py  anthropic.py  langgraph.py  openai.py
python/tests/: test_adapters.py  test_client.py
scripts/: build-hook.sh  check-stream-isolation.sh  demo-e2e.sh  demo-hook.sh  demo-live.sh  demo.sh  gate-check.sh  gen-test-keys.sh  hello.sh  pre-push  stall-detector.sh  sync-rules.sh  test-attacks.sh  verify-benchmarks.sh
testdata/: README.md  bundle_signing_pub.pem  mcp_captured.jsonl
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+1476 files in other folders)
